--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <styles type="stylesheet" src="styles.css"> </styles>
-    <title>Landing page</title>
+    <link rel="stylesheet" href="styles.css"> </link>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>La bota vaquera</title>
   </head>
   <body>
     
